:bug: fix: Align header to center When in smaller windows width the test would align to the left, which was unintended behaviour.

--- a/src/pages/Login/index.module.css
+++ b/src/pages/Login/index.module.css
@@ -19,6 +19,7 @@
 
 .header {
   font-size: var(--text-5xl);
+  text-align: center;
   padding-bottom: var(--padding-lg);
 }
 
