--- a/src/pages/PageNotFound/index.module.css
+++ b/src/pages/PageNotFound/index.module.css
@@ -13,6 +13,7 @@
 
 .header {
   padding-bottom: var(--padding-5xl);
+  text-align: center;
   font-size: var(--text-5xl);
 }
 
